--- a/frontend/happybirthday.css
+++ b/frontend/happybirthday.css
@@ -10,6 +10,11 @@ body {
 #text_1, #clickme {
     transform: scale(1.5);
 }
+#clickme {
+    position: absolute;
+    top: 70px;
+    margin-left: 280px;
+}
 
 #cake, #candles {
     position: absolute;
@@ -108,6 +113,7 @@ body {
     background-color: #f5f5f5;
     z-index: -1;
     border: solid 4px #000;
+    border-top: solid 1px #ffffff;
 }
 
 #top {
@@ -140,12 +146,4 @@ body {
     flex-direction: column;
     gap: 5px;
     transform: translateX(70px);
-}
-
-#clickme {
-    position: absolute;
-    top: 60px !important;
-    transform: scale(1.5);
-    left: 50%;
-    margin-left: 110px;
 }
